--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "combined-actor-info",
-  "version": "0.0.2",
-  "description": "Package for reading and parsing Zelda TotK CombinedActorInfo files",
+  "version": "0.0.3",
+  "description": "Package for reading and writing Zelda TotK CombinedActorInfo files",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test-read": "ts-node ./test/testread.ts",
+    "test-write": "ts-node ./test/testwrite.ts"
   },
   "author": "SuperSpazzy",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.2",
     "@types/three": "^0.154.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
